@@ -246,7 +246,7 @@
         <ImageView
           android:id="@+id/image_overview_other"
           style="@style/Widget.Doodle.ImageView.ListItem.Icon"
-          android:src="@drawable/ic_round_settings_suggest"
+          android:src="@drawable/ic_round_settings"
           tools:ignore="ContentDescription" />
 
         <LinearLayout style="@style/Widget.Doodle.LinearLayout.ListItem.TextBox.Stretch">
