@@ -117,20 +117,23 @@
 
   <string name="size_title">Shape size</string>
   <string name="size_description">Scale &amp; zoom effect</string>
+  <string name="size_category_zoom">Zoom effect</string>
+  <string name="size_category_launcher">Launcher zoom</string>
+  <string name="size_category_unlock">Lockscreen zoom</string>
   <string name="size_scale">Scale</string>
   <string name="size_scale_description">Useful for big screens and densities</string>
-  <string name="size_category_zoom">Zoom effect</string>
   <string name="size_zoom">Zoom intensity</string>
   <string name="size_zoom_description">When increased, the camera zooms out more</string>
+  <string name="size_zoom_rotation">Rotate some shapes while zooming</string>
+  <string name="size_zoom_rotation_description">Maximum rotation in degrees</string>
   <string name="size_zoom_launcher">Zoom out when opening quick settings or app drawer</string>
+  <string name="size_zoom_launcher_description">Might be unavailable on some devices</string>
   <string name="size_zoom_system">Use system-provided zoom effect</string>
   <string name="size_zoom_system_description">Might fix jerky zoom animation when tilt effect is turned on, available only on some devices</string>
   <string name="size_zoom_unlock">Zoom out on lockscreen</string>
   <string name="size_zoom_unlock_description">Might be jerky if tilt effect is turned on</string>
   <string name="size_zoom_duration">Unlock zoom duration</string>
   <string name="size_zoom_duration_description">Decrease for faster animation</string>
-  <string name="size_zoom_rotation">Rotate some shapes while zooming</string>
-  <string name="size_zoom_rotation_description">Maximum rotation in degrees</string>
 
   <!-- OTHER -->
 
