@@ -10,6 +10,7 @@
 - Improved: automatic Google Drive backup of current preferences disabled (not helpful when switching to a new phone and annoying when reinstalling the app)
 - Improved: disabled options in parallax section now greyed out
 - Improved: hide system-provided zoom option on non-Android-11 devices as this was removed in Android 12
+- Improved: shape size settings structure and icons
 - Fixed: unchanged text contrast when switching dark mode inside an app
 - Fixed: wrong animation on Android 12+ when app theme or language were changed
 - Fixed: random wallpapers not working as expected
